route myBudget screen fix alignment in bank details

--- a/src/App.css
+++ b/src/App.css
@@ -63,7 +63,7 @@
   display: flex;
   align-items: center;
   text-align: center;
-
+  width:auto;
   color: #000000;
 }
 
